--- a/config-app-frontend/index.html
+++ b/config-app-frontend/index.html
@@ -14,7 +14,7 @@
   <script src="main.js"></script>
   <script>
     fetchConfiguration();
-    // fetchSpesificConfig("example.com", "/products");
+    // fetchSpesificConfig("example.com", "/orders");
   </script>
 </body>
 </html>
